dd height to lend pro to avoid stretching on loading (#951)

--- a/src/pages/MarketsPage/components/BondsOverview/BondsOverview.module.scss
+++ b/src/pages/MarketsPage/components/BondsOverview/BondsOverview.module.scss
@@ -17,4 +17,5 @@
 
 .tabContent {
   background: var(--primary-background);
+  min-height: 440px;
 }
